@@ -26,12 +26,12 @@
 
 function chkconfig($value, $default = FALSE)
 {
-	if(eregi('^(1|y|on|yes|true|tak|t)$', $value))
+	if(!isset($value) || $value == '')
+		return $default;
+	elseif(eregi('^(1|y|on|yes|true|tak|t)$', $value))
 		return TRUE;
 	elseif(eregi('^(0|n|no|off|false|nie)$', $value))
 		return FALSE;
-	elseif(!isset($value) || $value == '')
-		return $default;
 	else
 		trigger_error('Incorrect option value: '.$value);
 }
